tests/ui/impl-trait/nested-return-type2-tait3.stderr
error[E0277]: the trait bound `impl Send: Duh` is not satisfied
  --> $DIR/nested-return-type2-tait3.rs:26:5
   |
LL |     || 42
   |     ^^^^^ the trait `Duh` is not implemented for `impl Send`
   |
   = help: the trait `Duh` is implemented for `i32`
note: required for `[closure@$DIR/nested-return-type2-tait3.rs:26:5: 26:7]` to implement `Trait`
  --> $DIR/nested-return-type2-tait3.rs:14:31
   |
LL | impl<R: Duh, F: FnMut() -> R> Trait for F {
   |                               ^^^^^     ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
